<resources>
    <string name="app_name">Gyro</string>
    <string name="empty">Empty</string>
    <string name="zero">0.0</string>
    <string name="zero_ip">0.0.0.0</string>
    <string name="min">MIN</string>
    <string name="current">CURRENT</string>
    <string name="max">MAX</string>
    <string name="raz">RAZ</string>
    <string name="title_activity_fullscreen_camera">FullscreenActivityCamera</string>
    <string name="open_camera">Open camera</string>
    <string name="go_to_main_button">Go back to main</string>
    <string name="take_photo">Take a photo</string>
    <string name="start_capture">Start capture</string>
    <string name="stop_capture">Stop capture</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="display_camera">Display/Hide Preview</string>
</resources>