<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        android:gravity="start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonRazSensors"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/raz" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:text="@string/min"
                android:gravity="start"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/textViewCurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:text="@string/current"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textViewMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:text="@string/max"
                android:gravity="end"
                android:textAlignment="textEnd" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMinX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:text="@string/zero"
                android:gravity="start"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/textViewX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:text="@string/zero"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textViewMaxX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:text="@string/zero"
                android:gravity="end"
                android:textAlignment="textEnd" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMinY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:text="@string/zero"
                android:gravity="start"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/textViewY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:text="@string/zero"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textViewMaxY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:text="@string/zero"
                android:gravity="end"
                android:textAlignment="textEnd" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMinZ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:text="@string/zero"
                android:gravity="start"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/textViewZ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:text="@string/zero"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textViewMaxZ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:text="@string/zero"
                android:gravity="end"
                android:textAlignment="textEnd" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>